spade-tests/src/snapshots/spade_tests__integration__lambda_entities_need_clock.snap
---
source: spade-tests/src/integration.rs
---
entity test() {
    entity || {};
}


error: Non-function lambdas must take a clock.
  ┌─ testinput:2:12
  │
2 │     entity || {};
  │     ------ ^^ Expected a clock
  │     │       
  │     Required because this is not a `fn`
  │
  = Consider adding a clock
  │
2 │     entity (clk) {};
  │            ~~~~~
